--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -31,9 +31,11 @@ video {
 }
 .hero-btns{
     margin-top: 32px;
+    
 }
 .hero-btns .btns{
     margin: 6px;
+    
 }
 .fa-play-circle{
     margin-left: 4px;
@@ -48,7 +50,7 @@ video {
 
 @media screen and (max-width: 768px){
     .hero-container > h1{
-        font-size: 50;
+        font-size: 50px;
         margin-top: -100px;
     }
     .hero-container > p{
