--- a/src/App.css
+++ b/src/App.css
@@ -17,28 +17,31 @@
   }
   
   .services {
-    background-image: url('../public/images/img-2.jpg');
+    background-image: url('../public/images/natal_background.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     color: #fff;
     font-size: 100px;
+    text-shadow: 1px 1px 2px black;
   }
   
   .products {
-    background-image: url('../public/images/img-1.jpg');
-    background-position: center;
-    background-size: fill;
-    background-repeat: no-repeat;
-    color: #fff;
-    font-size: 100px;
-  }
-  
-  .sign-up {
-    background-image: url('../public/images/img-8.jpg');
+    background-image: url('../public/images/verao.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     color: #fff;
     font-size: 100px;
+    text-shadow: 1px 1px 2px black;
+  }
+  
+  .sign-up {
+    background-image: url('../public/images/ponta_negra.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: #fff;
+    font-size: 100px;
+    text-shadow: 1px 1px 2px black;
   }
