--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -18,7 +18,7 @@
   }
   
   .btn--outline {
-    background-color: transparent;
+    background-color: #2a323f4f;
     color: #fff;
     padding: 8px 20px;
     border: 1px solid var(--primary);
